syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.matheuscarv69";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.matheuscarv69;
import "google/protobuf/timestamp.proto";

service KeyManagerRegistraGrpcService {
  rpc registrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerRemoverService{
  rpc remover (RemoverChavePixRequest) returns (RemoverChavePixResponse){}
}

service KeyManagerDetalhaChaveService{
  rpc detalhar (DetalharChavePixRequest) returns (DetalharChavePixResponse){}
}

service KeyManagerListaChavesService{
  rpc lista (ListaChavesRequest) returns (ListaChavesResponse){}
}

message ListaChavesRequest{
  string clienteId = 1;
}

message ListaChavesResponse{
  string clienteId = 1;
  repeated ChaveResponse chaves = 2;

  message ChaveResponse {
    string pixId = 1;
    TipoDeChaveGrpc tipoDeChave = 2;
    string chave = 3;
    TipoDeContaGrpc tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }
}

message DetalharChavePixRequest{
  ChavePixRequest pixIdEClienteId = 1;
  string chave = 2;

  message ChavePixRequest{
    string pixId = 1;
    string clienteId = 2;
  }
}

message DetalharChavePixResponse{

  string pixId = 1;
  string clienteId = 2;
  ChavePixResponse chavePix = 3;

  message ChavePixResponse{
    TipoDeChaveGrpc tipoDeChave = 1;
    string chave = 2;
    ContaResponse conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  message ContaResponse {
    TipoDeContaGrpc tipo = 1;
    string instituicao = 2;
    string nomeDoTitular = 3;
    string cpfDoTitular = 4;
    string agencia = 5;
    string numeroDaConta = 6;
  }

}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChaveGrpc tipoDeChave = 2;
  string chave = 3;
  TipoDeContaGrpc tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string pixId = 1;
}

enum TipoDeChaveGrpc{
  TIPO_DE_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeContaGrpc {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RemoverChavePixRequest{
  string pixId = 1;
  string clienteId = 2;
}

message RemoverChavePixResponse{
  string mensagem = 1;
}
